# Mathematica

./: Documentation.txt
Mathematica/: CMakeLists.txt  Main.qml  Main.qrc  Main.qss  MainStyle.qml  MathematicaWindowStyle.qml  derivativeofafunction.cpp  derivativeofafunction.h  dynamicinput.h  functionobjects.cpp  functionobjects.h  functionschartspoints.cpp  functionschartspoints.h  main.cpp  windowmathematica.cpp  windowmathematica.h
Mathematica/include/: exprtk.hpp
